--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,13 @@ export("%>%")
 export(add_data)
 export(aes)
 export(renderTuichart)
+export(tui_chart)
+export(tui_legend)
+export(tui_plot)
+export(tui_series)
+export(tui_tooltip)
+export(tui_xAxis)
+export(tui_yAxis)
 export(tuichart)
 export(tuichartOutput)
 importFrom(ggplot2,aes)
