--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export("%>%")
 export(add_data)
 export(aes)
 export(renderTuichart)
+export(set_tui_theme)
 export(tui_chart)
 export(tui_legend)
 export(tui_plot)
 export(tui_series)
+export(tui_theme)
 export(tui_tooltip)
 export(tui_xAxis)
 export(tui_yAxis)
