start vignette + add data methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(add_data)
+export(add_heat_data)
+export(add_scatter_data)
 export(aes)
 export(renderTuichart)
 export(set_tui_theme)
@@ -19,6 +21,7 @@ importFrom(ggplot2,aes)
 importFrom(htmlwidgets,createWidget)
 importFrom(htmlwidgets,shinyRenderWidget)
 importFrom(htmlwidgets,shinyWidgetOutput)
+importFrom(htmlwidgets,sizingPolicy)
 importFrom(magrittr,"%>%")
 importFrom(rlang,as_label)
 importFrom(rlang,eval_tidy)
