--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/dreamRs/tuicalendr
 BugReports: https://github.com/dreamRs/tuicalendr/issues
+RoxygenNote: 6.1.1
 Imports: 
     htmlwidgets,
     htmltools,
@@ -18,4 +19,10 @@ Imports:
     ggplot2,
     rlang,
     magrittr
-RoxygenNote: 6.1.1
+Suggests: 
+    gapminder,
+    dplyr,
+    tidyr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
