--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_data)
 export(add_heat_data)
 export(add_scatter_data)
+export(add_tree_data)
 export(aes)
 export(renderTuichart)
 export(set_tui_theme)
