--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_scatter_data)
 export(add_tree_data)
 export(aes)
 export(renderTuichart)
+export(renderTuimaps)
 export(set_tui_theme)
 export(tui_chart)
 export(tui_legend)
@@ -18,6 +19,9 @@ export(tui_xAxis)
 export(tui_yAxis)
 export(tuichart)
 export(tuichartOutput)
+export(tuimaps)
+export(tuimapsOutput)
+importFrom(geojsonio,geojson_json)
 importFrom(ggplot2,aes)
 importFrom(htmlwidgets,createWidget)
 importFrom(htmlwidgets,shinyRenderWidget)
@@ -26,4 +30,6 @@ importFrom(htmlwidgets,sizingPolicy)
 importFrom(magrittr,"%>%")
 importFrom(rlang,as_label)
 importFrom(rlang,eval_tidy)
+importFrom(sf,st_bbox)
+importFrom(sf,st_transform)
 importFrom(utils,modifyList)
