--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(add_scatter_data)
 export(add_tree_data)
 export(aes)
 export(renderTuichart)
-export(renderTuimaps)
+export(renderTuimap)
 export(set_tui_theme)
 export(tui_chart)
 export(tui_legend)
@@ -24,8 +24,8 @@ export(tui_xAxis)
 export(tui_yAxis)
 export(tuichart)
 export(tuichartOutput)
-export(tuimaps)
-export(tuimapsOutput)
+export(tuimap)
+export(tuimapOutput)
 importFrom(geojsonio,geojson_json)
 importFrom(ggplot2,aes)
 importFrom(htmlwidgets,JS)
