--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(renderTuichart)
 export(renderTuimap)
 export(set_tui_theme)
 export(tui_chart)
+export(tui_chartExportMenu)
 export(tui_legend)
 export(tui_plot)
 export(tui_series)
@@ -38,6 +39,7 @@ importFrom(rlang,as_label)
 importFrom(rlang,eval_tidy)
 importFrom(sf,st_bbox)
 importFrom(sf,st_transform)
+importFrom(shiny,getDefaultReactiveDomain)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(utils,modifyList)
