--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_boxplot_data)
 export(add_data)
 export(add_default_data)
 export(add_heat_data)
+export(add_line_data)
 export(add_map_data)
 export(add_pie_data)
 export(add_scatter_data)
