--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,19 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
-language: R
+language: r
+dist: trusty
+sudo: required
 cache: packages
+
+
+apt_packages:
+  - libudunits2-dev
+  - libv8-dev
+  - libprotobuf-dev
+  - libprotoc-dev
+  - protobuf-compiler
+  - valgrind
+
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo add-apt-repository -y ppa:opencpu/jq
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install -y libudunits2-dev libproj-dev libgeos-dev libgdal-dev netcdf-bin libv8-dev libjq-dev
